[package]
name = "micropub_rs"
version = "0.7.0"
authors = ["David Wilemski <david@wilemski.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "micropub_rs"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
chrono = "0.4"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
env_logger = "0.8"
futures = "0.3"
hyper = "0.14"
indoc = "1.0"
log = "0.4"
magick_rust = { git = "https://github.com/davidwilemski/magick-rust", branch = "no-clap-dep" }
markdown = "0.3"
mime = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.2"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4", features = ["make"] }
url = "2.1"
warp = { version = "0.3", default-features = false, features = ["multipart"] }
axum = "0.5"
http = "0.2.8"
