[package]
name = "micropub_rs"
version = "0.10.2"
authors = ["David Wilemski <david@wilemski.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "micropub_rs"

[dependencies]
anyhow = "1.0"
bytes = "1.3"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
diesel = { version = "2.1", features = ["sqlite", "r2d2"] }
futures = "0.3"
hyper = "1.0"
indoc = "1.0"
log = "0.4"
magick_rust = "0.19"
markdown = "0.3"
mime = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["gzip", "json", "stream", "rustls-tls", "tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.5", features = ["fs"] }
url = "2.3"
urlencoding = "2"
axum = { version = "0.7", features = ["multipart"] }
http = "1.0"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
tokio-rayon = "2.1"
